# tabel

./: .gitignore  0504421_TEMPLATE_RULES.md  CMakeLists.txt  README.md  TODO.md
assets/: 0504421.ots
cmake/: copy_runtime_assets.cmake
packaging/: tabel0504421.desktop
src/: app.cpp  app.hpp  calendar.cpp  calendar.hpp  database.cpp  database.hpp  fonts.cpp  fonts.hpp  main.cpp  models.hpp  settings.cpp  settings.hpp  widgets.cpp  widgets.hpp
